src/components/StaticAppBar/StaticAppBar.css
.siteTitle {
    height: 25px;
    margin-top: 21px;
    display: block;
}

.topAppBar button{
    display: none !important;
}
.topAppBar div div div button {
    display: block !important;
    visibility: visible;
    box-shadow: none;
}
a.drawerItem > div {
  border-left: 6px solid #0084ff;
  margin: 1px 0 1px 0;
}
a.drawerItem {
    text-decoration: none;
    color: #000;
}
.drawerAppBar button{
    margin-top: 0px !important;
}
.top-menu{
    top: -26px;
}
.iconMenuRight{
    display: block;
}
@media only screen and (max-width: 800px){

    .top-menu{
        display: none !important;
    }
    .topAppBar button{
        display: block  !important;
    }
    .top-menu{
        display: none;
    }
    .conversation__description .description__heading {
        margin-top: 0;
        max-width: 100%;
    }
    .section_copy{
        padding: 60px 0px;
    }
    .img-container {
        padding-right: 20px;
    }
    .android-mockup{
        max-width: 100%;
        margin-left: 0%;
        text-align: center;
    }
}

.topRightMenu {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: -8px;
    margin-top: 1px;
}
@media(max-width: 1000px){
    .topRightLabel{
        display: None;
    }
}

